<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:noHistory="true"
        tools:context=".CoffeeActivity">

    <ImageView
            android:layout_width="237dp"
            android:layout_height="158dp" app:srcCompat="@drawable/coffee" android:id="@+id/coffeeImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            android:contentDescription="@string/coffee_picture"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coffeeImage" android:layout_marginTop="32dp"
            android:id="@+id/coffeeTable">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <CheckBox
                    android:text="@string/cream"
                    android:onClick="onCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/creamBox" android:layout_weight="0.33"/>
            <CheckBox
                    android:text="@string/caramel"
                    android:layout_width="wrap_content"
                    android:onClick="onCheckbox"
                    android:layout_height="wrap_content" android:id="@+id/caramelBox" android:layout_weight="0.33"/>
            <CheckBox
                    android:text="@string/milk"
                    android:layout_width="wrap_content"
                    android:onClick="onCheckbox"
                    android:layout_height="wrap_content" android:id="@+id/milkBox" android:layout_weight="0.33"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <CheckBox
                    android:text="@string/syrup"
                    android:onClick="onCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/syrupBox" android:layout_weight="0.33"/>
            <CheckBox
                    android:text="@string/whipped_cream"
                    android:onClick="onCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/whippedBox" android:layout_weight="0.33"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/coffeeSizeSpinner"
                    android:layout_weight="0.33"/>
        </TableRow>

    </TableLayout>

    <TextView
            android:text="@string/amount_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/coffeeAmountLabel"
            app:layout_constraintTop_toBottomOf="@+id/coffeeTable"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/numCoffeeSpinner"
            app:layout_constraintTop_toBottomOf="@+id/coffeeAmountLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/coffeeSubtotalLabel"
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/numCoffeeSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/coffeeSubtotalBox"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@+id/coffeeSubtotalLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:importantForAutofill="no"
            tools:ignore="LabelFor"/>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="159dp"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content" android:id="@+id/orderCoffeeButton"
            app:layout_constraintTop_toBottomOf="@+id/coffeeSubtotalBox"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="confirmCoffee"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
