<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        tools:context=".MainActivity">
    <ImageButton
            android:layout_width="293dp"
            android:layout_height="162dp" app:srcCompat="@drawable/donuts" android:id="@+id/donutButton"
            android:contentDescription="@string/donut_button" app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:layout_marginTop="40dp" android:onClick="openDonuts" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.511"/>
    <ImageButton
            android:layout_width="210dp"
            android:layout_height="162dp" app:srcCompat="@drawable/coffee" android:id="@+id/coffeeButton"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/donutButton"
            android:onClick="openCoffee"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/coffee_button"
            app:layout_constraintHorizontal_bias="0.511"/>
    <ImageButton
            android:layout_width="125dp"
            android:layout_height="111dp" app:srcCompat="@drawable/storeordericon"
            android:id="@+id/orderButton" android:layout_weight="1"
            android:onClick="openStoreOrder"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/storeOrderButton"
            app:layout_constraintTop_toBottomOf="@+id/coffeeButton" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/store_order_button"/>
    <ImageButton
            android:layout_width="125dp"
            android:layout_height="111dp" app:srcCompat="@drawable/carticon" android:id="@+id/storeOrderButton"
            android:onClick="openOrder"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/orderButton"
            app:layout_constraintTop_toBottomOf="@+id/coffeeButton" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/current_order_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
