<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:noHistory="true"
        tools:context=".DonutOrderActivity">



    <ImageView
            android:layout_width="237dp"
            android:scaleType="centerCrop"
            android:layout_height="164dp" app:srcCompat="@drawable/donuts" android:id="@+id/donutView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="88dp"
            android:contentDescription="@string/donut_picture"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/amount_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/donutAmountLabel"
            app:layout_constraintTop_toBottomOf="@+id/donutView"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/numDonutSpinner"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/donutAmountLabel" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subtotalView"
            app:layout_constraintTop_toBottomOf="@+id/numDonutSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/donutSubtotal"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtotalView"
            android:importantForAutofill="no" android:layout_marginTop="8dp" tools:ignore="LabelFor"/>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="159dp"
            android:background="@color/colorAccent"
            android:layout_height="46dp" android:id="@+id/addDonutsButton"
            android:onClick="confirmDonuts"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donutSubtotal" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.498"/>

</androidx.constraintlayout.widget.ConstraintLayout>
