<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/topLayout">
        <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent" app:srcCompat="@drawable/carticon" android:id="@+id/imageView"
                android:layout_weight="0.5" android:contentDescription="@string/current_order_button"/>
        <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="0.5">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:ems="10"
                        android:focusable="false"
                        android:id="@+id/subtotalBox" android:importantForAutofill="no"
                        tools:ignore="LabelFor"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView2"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:ems="10"
                        android:focusable="false"
                        android:id="@+id/taxBox" android:importantForAutofill="no"
                        tools:ignore="LabelFor"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="match_parent">
                <TextView
                        android:text="@string/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="none"
                        android:focusable="false"
                        android:id="@+id/totalBox" android:importantForAutofill="no"
                        tools:ignore="LabelFor"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ListView
            android:id="@+id/itemView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"
            android:padding="@dimen/big_padding" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/topLayout" android:layout_marginTop="16dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="64dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout">
        <Button
                android:text="@string/cancel"
                android:background="@color/colorAccent"
                android:layout_margin="@dimen/big_padding"
                android:layout_width="wrap_content"
                android:onClick="cancelItem"
                android:layout_height="wrap_content" android:id="@+id/cancelItemButton"
                android:layout_weight="0.5" tools:ignore="ButtonStyle"/>
        <Button
                android:text="@string/confirm"
                android:background="@color/colorAccent"
                android:layout_margin="@dimen/big_padding"
                android:layout_width="wrap_content"
                android:onClick="confirmOrder"
                android:layout_height="wrap_content" android:id="@+id/confirmOrderButton" android:layout_weight="0.5"
                tools:ignore="ButtonStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
