<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoreOrderActivity">


    <ImageView
            android:layout_width="343dp"
            android:layout_height="82dp" app:srcCompat="@drawable/storeorderspageimg"
            android:id="@+id/storeOrderImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            android:contentDescription="@string/store_orders_image"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/storeOrderImage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            android:id="@+id/topItems">
        <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/orderSpinner" android:layout_weight="0.5"/>
        <TextView
                android:text="@string/total"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent" android:id="@+id/textView4" android:layout_weight="0.15"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="none"
                android:focusable="false"
                android:ems="10"
                android:id="@+id/orderTotalBox" android:layout_weight="0.35"
                android:importantForAutofill="no" tools:ignore="LabelFor"/>
    </LinearLayout>
    <ListView
            android:id="@+id/orderView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"
            android:padding="@dimen/big_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
            app:layout_constraintTop_toBottomOf="@+id/topItems" android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>

    <Button
            android:text="@string/cancel_order"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/cancelOrderButton" android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="cancelOrder"
            android:layout_marginBottom="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginRight="32dp" android:layout_marginEnd="32dp" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
